--- a/public/partials/devices/add.html
+++ b/public/partials/devices/add.html
@@ -8,25 +8,54 @@
 
 <form name="form" class="form">
     <div class="form-section">
-        <div class="section-label">Device Identifieion</div>
+        <div class="section-label">Device Type</div>
         <div class="section-container">
             <div class="form-editor">
                 <div class="control-group">
-                    <label class="control-label">Device Type</label>
+                    <label class="control-label">Category</label>
                     <div class="controls">
-                        <input type="hidden" ng-model="categoryPicker" ui-select2="categoryOpts" />
+                        <input type="hidden" ng-model="deviceTypes.category.picker" ui-select2="deviceTypes.category.opts" />
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label">Make</label>
                     <div class="controls">
-                        <input type="hidden" ng-model="makePicker" ui-select2="makeOpts" />
+                        <input type="hidden" ng-model="deviceTypes.make.picker" ui-select2="deviceTypes.make.opts" />
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label">Model</label>
                     <div class="controls">
-                        <input type="hidden" ng-model="modelPicker" ui-select2="modelOpts">
+                        <input type="hidden" ng-model="deviceTypes.model.picker" ui-select2="deviceTypes.model.opts" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label"></label>
+                    <div class="controls">
+                        <button ng-click="deviceTypes.reset()" type="button" class="btn">Reset</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-section">
+        <div class="section-label">Identifier</div>
+        <div class="section-container">
+            <div class="form-editor">
+                <div
+                    ng-class="{ 'error': form.identifier.$invalid && !form.identifier.$pristine }"
+                    class="control-group">
+
+                    <label class="control-label">Identifier</label>
+                    <div class="controls">
+                        <input
+                            ng-model="model.biomedId"
+                            required
+                            ab-device-unique="{field: 'biomedId'}"
+                            type="text"
+                            name="identifier"
+                            class="input-xlarge">
+                        <span ng-show="form.identifier.$error.unique" class="help-inline">Identifier must be unique</span>
                     </div>
                 </div>
             </div>
@@ -37,44 +66,101 @@
         <div class="section-container">
             <div class="form-editor">
                 <div class="control-group">
-                    <label class="control-label">Technical Data</label>
+                    <label class="control-label">Serial Number</label>
                     <div class="controls">
-                        <textarea ng-model="model.technicalData" type="text" class="input-xxlarge"></textarea>
+                        <input ng-model="model.serialNumber" type="text" class="input-large">
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">Links</label>
+                    <label class="control-label">Purchase Date</label>
                     <div class="controls">
-                        <textarea ng-model="model.links" type="text" class="input-xxlarge"></textarea>
+                        <input ng-model="model.purchaseDate" datepicker type="text" class="input-small">
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">Recommended Parts</label>
+                    <label class="control-label">Warranty Expiration</label>
                     <div class="controls">
-                        <textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
+                        <input ng-model="model.warrantyExpiration" datepicker type="text" class="input-small">
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Location</label>
+                    <div class="controls">
+                        <input ng-model="model.location" type="text" class="input-large">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="form-section">
-        <div class="section-label">Images</div>
+        <div class="section-label">Frequency</div>
         <div class="section-container">
             <div class="form-editor">
                 <div class="control-group">
-                    <label class="control-label">Images</label>
+                    <label class="control-label">Frequency</label>
                     <div class="controls">
-                        <div class="dropzone" dropzone="imageOpts"></div>
+                        <select ng-model="model.frequencyType" class="input-xlarge">
+                            <option value="">None</option>
+                            <option value="Anesthesia">Anesthesia</option>
+                            <option value="Annual">Annual</option>
+                            <option value="DLLR">DLLR</option>
+                            <option value="ERT">ERT</option>
+                            <option value="Ice Maker">Ice Maker</option>
+                            <option value="Imaging">Imaging</option>
+                            <option value="Medical Device">Medical Device</option>
+                            <option value="Medical Gas Systems">Medical Gas Systems</option>
+                            <option value="N2O Trace Gas">N2O Trace Gas</option>
+                            <option value="Quarterly">Quarterly</option>
+                            <option value="RAE">RAE</option>
+                            <option value="Semi">Semi</option>
+                            <option value="Sterilizer - Cleaning">Sterilizer - Cleaning</option>
+                            <option value="Sterilizer - F">Sterilizer - F</option>
+                            <option value="Sterilizer - TT">Sterilizer - TT</option>
+                            <option value="Vaporizer">Vaporizer</option>
+                            <option value="Waste Management System">Waste Management System</option>
+                            <option value="legacy" disabled>legacy</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="control-group" ng-show="model.frequencyType">
+                    <label class="control-label">Schedule</label>
+                    <div class="controls">
+                        <table class="table frequency" style="margin-right: 30px">
+                            <thead>
+                                <tr>
+                                    <th>JAN</th>
+                                    <th>FEB</th>
+                                    <th>MAR</th>
+                                    <th>APR</th>
+                                    <th>MAY</th>
+                                    <th>JUN</th>
+                                    <th>JUL</th>
+                                    <th>AUG</th>
+                                    <th>SEP</th>
+                                    <th>OCT</th>
+                                    <th>NOV</th>
+                                    <th>DEC</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]">
+                                        <a ng-click="toggleFrequency(i)" class="{{ model.frequencySchedule[i] }}">
+                                            <i ng-class="{ 'icon-ok': model.frequencySchedule[i], 'icon-remove': !model.frequencySchedule[i] }"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="form-section">
         <div class="section-label">&nbsp;</div>
         <div class="section-container">
-            <button ng-click="save()" ng-disabled="form.$invalid" type="button" class="btn btn-primary">Save</button>
+            <button ng-click="create()" ng-disabled="form.$invalid || !model.deviceType" type="button" class="btn btn-primary">Save</button>
         </div>
     </div>
 </form>
