--- a/public/partials/workorders/add.html
+++ b/public/partials/workorders/add.html
@@ -116,6 +116,23 @@
 			</div>
 		</div>
 	</div>
+        <div class="form-section" ng-show="workorderType != 'shipment'">
+                <div class="section-label">Devices</div>
+                <div class="section-container">
+                        <div class="form-editor">
+                                <div class="control-group">
+                                <label class="control-label">Devices</label>
+                                <div class="controls">
+                                        <select multiple ui-select2 ng-model="model.devices" data-placeholder="Choose Devices(s)"  class="input-xxlarge">
+                                                <option ng-repeat="device in devices" value="{{device._id}}">
+                                                        {{device.biomedId}} - {{device.deviceType.make}} {{device.deviceType.model}}
+                                                </option>
+                                        </select>
+                                </div>
+                        </div>
+                        </div>
+                </div>
+        </div>
 	<div class="form-section" ng-show="workorderType != 'shipment'">
 		<div class="section-label">Scheduling</div>
 		<div class="section-container">
