--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -122,6 +122,33 @@
 				</div>
 			</div>
 			<div class="form-section" ng-show="master.reason != 'Shipment'">
+				<div class="section-label">Devices</div>
+				<div class="section-container">
+					<div ng-hide="devices.visible" class="form-preview">
+						<span>Devices</span>: <strong>{{master.devices.length}}</strong><br>
+						<a ng-click="devices.edit()" ng-show="accountHasPermission('system.edit')">Edit</a>
+					</div>
+					<div ng-show="devices.visible" class="form-editor">
+						<div class="control-group">
+							<label class="control-label"><span>Devices</span></label>
+							<div class="controls">
+								{{devices.devices}}
+								<select multiple ui-select2 ng-model="devices.model.devices" data-placeholder="Choose Devices(s)"  class="input-xxlarge">
+                                    <option ng-repeat="device in allDevices" value="{{device._id}}">
+                                            {{device.biomedId}} - {{device.deviceType.make}} {{device.deviceType.model}}
+                                    </option>
+ 								</select>
+							</div>
+						</div>
+						<div class="form-actions">
+							<button ng-click="devices.save(false)" type="button" class="btn btn-primary">Save</button>
+							<button	ng-click="devices.save(true)" type="button" class="btn">Save & Notify</button>
+							<button ng-click="devices.reset()" type="button" class="btn">Cancel</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="form-section" ng-show="master.reason != 'Shipment'">
 				<div class="section-label">Scheduling</div>
 				<div class="section-container">
 					<div ng-hide="scheduling.visible" class="form-preview">
