Added more stuff

--- a/public/partials/deviceTypes/edit.html
+++ b/public/partials/deviceTypes/edit.html
@@ -58,6 +58,12 @@
                                     <textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
                                 </div>
                             </div>
+       	                    <div class="control-group">
+                  	        <label class="control-label">Recommended Test Equipment</label>
+       	       	                <div class="controls">
+				    <textarea ng-model="model.testEquipmentRecommended" type="text" class="input-xxlarge"></textarea>
+       	       	                </div>
+       	       	            </div>
                         </div>
                     </div>
                 </div>
