--- a/public/partials/deviceTypes/add.html
+++ b/public/partials/deviceTypes/add.html
@@ -54,6 +54,12 @@
                         <textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
                     </div>
                 </div>
+                <div class="control-group">
+                    <label class="control-label">Recommended Test Equipment</label>
+                    <div class="controls">
+			<textarea ng-model="model.testEquipmentRecommended" type="text" class="input-xxlarge"></textarea>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
