--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -62,7 +62,7 @@ html(lang="en", ng-app="biomed", ng-controller="PageCtrl")
 
 					li(data-match-route='/deviceTypes.*')
 						a(href='/deviceTypes')
-							|  Devices
+							|  Global Devices
 
 					li(data-match-route='/checkLists.*')
 						a(href='/checkLists')
