--- a/public/partials/clients/edit.html
+++ b/public/partials/clients/edit.html
@@ -298,7 +298,7 @@
 				<table class="biomed-table">
 					<thead>
 						<tr>
-							<th style="width: 7%">Device ID</th>
+							<th style="width: 7%">Control #</th>
 							<th style="width: 6%">Category</th>
 							<th style="width: 5%">Make</th>
 							<th style="width: 5%">Model</th>
