--- a/public/partials/deviceTypes/add.html
+++ b/public/partials/deviceTypes/add.html
@@ -1,9 +1,8 @@
 <ul class="breadcrumb">
-    <li><a href="/devices"><i class="icon-briefcase"></i> Devices</a><span class="divider"></span><li>
-    <li class="active">New Device<li>
+    <li class="active">New Global Device<li>
 </ul>
 <header>
-    <h1>New Device</h1>
+    <h1>New Global Device</h1>
 </header>
 
 <form name="form" class="form">
@@ -49,7 +48,7 @@
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">Recommended Parts</label>
+                    <label class="control-label">Recommended PM Parts</label>
                     <div class="controls">
                         <textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
                     </div>
