--- a/public/partials/deviceTypes/index.html
+++ b/public/partials/deviceTypes/index.html
@@ -1,14 +1,14 @@
 <ul class="breadcrumb">
-    <li><a href="/devices"><i class="icon-briefcase"></i> Devices</a><li>
+    <li><a href="/devices"><i class="icon-briefcase"></i> Global Devices</a><li>
 </ul>
 <header>
-    <h1>Devices</h1>
+    <h1>Global Devices</h1>
 </header>
 
 <div class="row-fluid">
     <div class="span12">
         <div class="toolbelt">
-            <a href="/deviceTypes/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Device</a>
+            <a href="/deviceTypes/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Global Device</a>
             <div class="pull-right">
                 <span class="toolbelt-text">Search:</span>
                 <div class="input-append">
