--- a/public/partials/devices/add.html
+++ b/public/partials/devices/add.html
@@ -39,14 +39,14 @@
         </div>
     </div>
     <div class="form-section">
-        <div class="section-label">Identifier</div>
+        <div class="section-label">Control #</div>
         <div class="section-container">
             <div class="form-editor">
                 <div
                     ng-class="{ 'error': form.identifier.$invalid && !form.identifier.$pristine }"
                     class="control-group">
 
-                    <label class="control-label">Identifier</label>
+                    <label class="control-label">Control #</label>
                     <div class="controls">
                         <input
                             ng-model="model.biomedId"
