--- a/public/partials/checkLists/add.html
+++ b/public/partials/checkLists/add.html
@@ -38,6 +38,7 @@
                         <select ng-model="field.type" class="input-xlarge" required>
                             <option value="boolean">Pass / Fail</option>
                             <option value="range">Range</option>
+                            <option value="text">Text</option>
                         </select>
                     </div>
                 </div>
