--- a/public/partials/testRuns/add.html
+++ b/public/partials/testRuns/add.html
@@ -32,6 +32,12 @@
                         <input ng-model="field.value" type="number" class="input-xlarge" required>
                     </div>
                 </div>
+                <div class="control-group" ng-if="field.type == 'text'">
+                    <label class="control-label">Result</label>
+                    <div class="controls">
+                        <input ng-model="field.value" type="text" class="input-xlarge" required>
+                    </div>
+                </div>
                 <div class="control-group">
                     <label class="control-label">Comments</label>
                     <div class="controls">
