--- a/public/partials/clients/edit.html
+++ b/public/partials/clients/edit.html
@@ -299,8 +299,8 @@
 					<thead>
 						<tr>
 							<th style="width: 7%">Control #</th>
-							<th style="width: 6%">Category</th>
-							<th style="width: 5%">Make</th>
+							<th style="width: 6%">Device</th>
+							<th style="width: 5%">Manufacturer</th>
 							<th style="width: 5%">Model</th>
 							<th style="width: 5%">Serial No.</th>
 							<th style="width: 8%">Purchase Date</th>
