--- a/public/partials/deviceTypes/index.html
+++ b/public/partials/deviceTypes/index.html
@@ -20,8 +20,8 @@
         <table class="biomed-table" infinite-scroll="addItems()" can-load="canLoad" threshold="300">
             <thead>
                 <tr>
-                    <th style="width: 33%" ng-class="selectedCls('category')"  ng-click="changeSorting('category')">Device Type</th>
-                    <th style="width: 33%" ng-class="selectedCls('make')"  ng-click="changeSorting('make')">Make</th>
+                    <th style="width: 33%" ng-class="selectedCls('category')"  ng-click="changeSorting('category')">Device</th>
+                    <th style="width: 33%" ng-class="selectedCls('make')"  ng-click="changeSorting('make')">Manufacturer</th>
                     <th style="width: 33%" ng-class="selectedCls('model')"  ng-click="changeSorting('model')">Model</th>
                     <th></th>
                 </tr>
