--- a/public/partials/deviceTypes/edit.html
+++ b/public/partials/deviceTypes/edit.html
@@ -101,6 +101,7 @@
                     <div class="section-label">&nbsp;</div>
                     <div class="section-container">
                         <button ng-click="save()" ng-disabled="form.$invalid" type="button" class="btn btn-primary">Save</button>
+                        <button ng-click="delete()" ng-disabled="form.$invalid" ng-show="accountHasPermission('system.admin')" type="button" class="btn btn-danger">Remove</button>
                     </div>
                 </div>
             </form>
