--- a/public/partials/devices/add.html
+++ b/public/partials/devices/add.html
@@ -12,13 +12,13 @@
         <div class="section-container">
             <div class="form-editor">
                 <div class="control-group">
-                    <label class="control-label">Category</label>
+                    <label class="control-label">Device</label>
                     <div class="controls">
                         <input type="hidden" ng-model="deviceTypes.category.picker" ui-select2="deviceTypes.category.opts" />
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">Make</label>
+                    <label class="control-label">Manufacturer</label>
                     <div class="controls">
                         <input type="hidden" ng-model="deviceTypes.make.picker" ui-select2="deviceTypes.make.opts" />
                     </div>
