--- a/public/partials/schedule/pms.html
+++ b/public/partials/schedule/pms.html
@@ -28,7 +28,7 @@
                                                                        	<option value="Ice Maker">Ice Maker</option>
                                                                        	<option value="Imaging">Imaging</option>
                                                                        	<option value="Medical Device">Medical Device</option>
-                                                                       	<option value="Medical Gas Systems">Medical Gas Systems</option>
+                                                                       	<option value="Medical Gas System">Medical Gas Systems</option>
                                                                        	<option value="N2O Trace Gas">N2O Trace Gas</option>
                                                                        	<option value="Quarterly">Quarterly</option>
                                                                        	<option value="RAE">RAE</option>
