--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -15,7 +15,7 @@
 			<form name="form" class="form-section" style="margin-bottom: 0">
 				<div class="section-label">Status</div>
 				<div class="section-container">
-					<div ng-hide="status.visible" class="form-preview">
+					<div class="form-preview">
 						<b>{{master.status}}</b><br>
 					</div>
 				</div>
