--- a/app/templates/partsRequest.html.tmpl
+++ b/app/templates/partsRequest.html.tmpl
@@ -78,6 +78,9 @@
                                                     </tr>
                                                     <% } %>
                                                     <% if (biomedId) { %>
+                                                    <tr style="margin-top: 24px;">
+                                                        <td colspan="2"><h4>Workorder</h4></td>
+                                                    </tr>
                                                     <tr>
                                                         <td>Atlantic Biomedical ID</td>
                                                         <td><%- biomedId %></td>
